--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
+    />
 
     <link rel="stylesheet" href="./style/style.css" />
     <script defer src="./js/app.js"></script>
@@ -121,25 +125,25 @@
               let's find attractive places
             </p>
           </div>
-          <div class="discover-image">
-            <div class="container-image-discover">
-              <div class="dhigurah-beach">
+          <div class="discover-image swiper-container">
+            <div class="container-image-discover swiper-wrapper">
+              <div class="dhigurah-beach swiper-slide">
                 <img src="./img/discover-img1.png" alt="" />
-                <div class="dhigurah-beach-explain">
+                <div class="dhigurah-beach-explain swiper-explain">
                   <h2>Dhigurah Beach</h2>
                   <p>32 hours available</p>
                 </div>
               </div>
-              <div class="Bikini-beach">
+              <div class="Bikini-beach swiper-slide">
                 <img src="./img/discover-img2.png" alt="" />
-                <div class="Bikini-beach-explain">
+                <div class="Bikini-beach-explain swiper-explain">
                   <h2>Bikini Beach</h2>
                   <p>24 hours available</p>
                 </div>
               </div>
-              <div class="Milaidhoo-beach">
+              <div class="Milaidhoo-beach swiper-slide">
                 <img src="./img/discover-img3.png" alt="" />
-                <div class="Milaidhoo-beach-explain">
+                <div class="Milaidhoo-beach-explain swiper-explain">
                   <h2>Milaidhoo Beach</h2>
                   <p>15 hours available</p>
                 </div>
@@ -343,6 +347,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/ScrollTrigger.min.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
     <script src="./js/app.js"></script>
   </body>
