continue animation and responsive website

--- a/index.html
+++ b/index.html
@@ -156,18 +156,18 @@
           <div class="serve-title">
             <h2>With our experience<br />We will serve you</h2>
             <div class="serving">
-              <div class="year-experience">
+              <div class="year-experience experience-company">
                 <h4>20</h4>
                 <p>
                   Year<br />
                   Experience
                 </p>
               </div>
-              <div class="complete-tours">
+              <div class="complete-tours experience-company">
                 <h4>75</h4>
                 <p>Complete <br />Tours</p>
               </div>
-              <div class="tourist-destination">
+              <div class="tourist-destination experience-company">
                 <h4>600+</h4>
                 <p>Tourist <br />Destination</p>
               </div>
@@ -187,14 +187,13 @@
             </p>
           </div>
           <div class="discover-video">
-            <div class="video">
-              <video width="500" loop="true" autoplay="true">
-                <source src="./video/video.mp4" type="video/mp4" />
-              </video>
+            <video loop="true" id="video-file">
+              <source src="./video/video.mp4" type="video/mp4" />
+            </video>
+
+            <div class="play-button" id="play-button">
+              <i class="ri-play-fill play-btn" id="play-icon"></i>
             </div>
-            <!-- <div class="play-button">
-              <i class="ri-play-fill"></i>
-            </div> -->
           </div>
         </div>
       </div>
