adding animation scroll effect in css

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
             ><i class="ri-facebook-box-fill socmed"></i
           ></a>
         </div>
+        <div class="scroll-effect"></div>
       </div>
       <!-- ====================== ABOUT ====================== -->
       <div class="about" id="about">
