--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
               <a href="#places" class="item">Place</a>
             </li>
           </ul>
+          <i class="ri-close-fill nav-close" id="dark-light-mode"></i>
           <i class="ri-close-fill nav-close" id="nav-close"></i>
         </div>
         <div class="toggle" id="toggle">
